--- a/lanjut.html
+++ b/lanjut.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-image: url('https://i.ibb.co/com/8rnh5k0/1723381045176.jpg');
+      background-image: url('back.png');
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
