--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       <div class="input-group">
         <label for="balance">Masukkan Saldo</label>
         <div class="input-icon">
-          <input type="tel" id="jumlahInput" name="balance" placeholder="Masukkan Saldo" required oninput="updateNominal()" style="width: calc(100% - 60px); padding: 11px 16px 13px 40px; border: 2px solid #ccc; border-radius: 5px;">
+          <input type="tel" id="jumlahInput" name="balance" placeholder="Sisa Saldo Terakhir" required oninput="updateNominal()" style="width: calc(100% - 60px); padding: 11px 16px 13px 40px; border: 2px solid #ccc; border-radius: 5px;">
           <img src="rp.png" alt="Saldo Icon">
         </div>
       </div>
