--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 0;
       margin-top: 40px;
-      background-image: url('akusatu.png');
+      background-image: url('akusatu.jpg');
       background-size: cover;
       background-repeat: no-repeat;
       background-attachment: fixed;
