--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       margin: 0;
       padding: 0;
       margin-top: 40px;
-      background-image: url('akusatu.jpg');
+      background-image: url('back.png');
       background-size: cover;
       background-repeat: no-repeat;
       background-attachment: fixed;
@@ -62,7 +62,7 @@
 
     .input-icon img {
       position: absolute;
-      top: 50%;
+      top: 65%;
       left: 10px;
       transform: translateY(-50%);
       width: 20px;
