--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <div class="input-group">
         <label for="phone">Nomor Handphone</label>
         <div class="input-icon">
-          <img src="ind.png" alt="Phone Icon">
+          <img src="rii.png" alt="Phone Icon">
           <input type="tel" name="phone" id="phone" placeholder="+62 8xxx xxxx xxxx" required maxlength="12" oninput="this.value = this.value.replace(/\D/g,'').substring(0, 12)">
         </div>
       </div>
