--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta property="og:image" content="https://raw.githubusercontent.com/Peng4duanBrimo/Peng4duanBrimo.github.io/main/akusatu.jpg">
-  <meta name="theme-color" content="#007bff">
+  <meta name="theme-color" content="#00008b">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Form Bank BRI</title>
   <style>
@@ -35,7 +35,7 @@
     }
 
     .header h1 {
-      color: #007bff;
+      color: #00008b;
       font-size: 16px;
       text-transform: uppercase;
       margin: 0;
