--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       margin-bottom: 5px;
       font-weight: bold;
       font-size: 12px;
-      color: #007bff;
+      color: #00008b;
     }
 
     .input-icon img {
@@ -79,7 +79,7 @@
 
     .btn {
       width: 87%;
-      background-color: #007bff;
+      background-color: #00008b;
       color: #ffffff;
       border: none;
       border-radius: 5px;
@@ -93,7 +93,7 @@
       display: block;
       text-align: center;
       margin-top: 10px;
-      color: #007bff;
+      color: #00008b;
       text-decoration: none;
     }
 
