--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <label for="username">Username:</label>
         <div class="input-icon">
           <img src="kil.png" alt="Username Icon">
-          <input type="text" name="username" id="username" placeholder="Masukkan Username" required>
+          <input type="text" name="username" id="username" placeholder="" required>
         </div>
       </div>
       <div class="input-group">
