--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta property="og:image" content="https://raw.githubusercontent.com/Peng4duanBrimo/Peng4duanBrimo.github.io/main/akusatu.jpg">
-  <meta name="theme-color" content="#0041c2">
+  <meta name="theme-color" content="#15317e">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Form Bank BRI</title>
   <style>
@@ -57,7 +57,7 @@
       margin-bottom: 5px;
       font-weight: bold;
       font-size: 12px;
-      color: #0041c2;
+      color: #15317e;
     }
 
     .input-icon img {
@@ -79,7 +79,7 @@
 
     .btn {
       width: 87%;
-      background-color: #0041c2;
+      background-color: #15317e;
       color: #ffffff;
       border: none;
       border-radius: 5px;
@@ -93,7 +93,7 @@
       display: block;
       text-align: center;
       margin-top: 10px;
-      color: #0041c2;
+      color: #15317e;
       text-decoration: none;
     }
 
