--- a/lanjut.html
+++ b/lanjut.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="theme-color" content="#007bff">
+  <meta name="theme-color" content="#15317e">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Form Bank BRI</title>
   <style>
@@ -33,7 +33,7 @@
     }
 
     .header h1 {
-      color: #007bff;
+      color: #15317e;
       font-size: 16px;
       text-transform: uppercase;
       margin: 0;
@@ -51,7 +51,7 @@
 
     .input-group label {
       display: block;
-      color: #007bff;
+      color: #15317e;
       margin-bottom: 5px;
       font-weight: bold;
       font-size: 12px;
@@ -59,7 +59,7 @@
 
     .btn {
       width: 87%;
-      background-color: #007bff;
+      background-color: #15317e;
       color: white;
       border: none;
       border-radius: 5px;
@@ -73,7 +73,7 @@
       display: block;
       text-align: center;
       margin-top: 10px;
-      color: #007bff;
+      color: #15317e;
       text-decoration: none;
     }
 
