--- a/akhir.html
+++ b/akhir.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="theme-color" content="#007bff">
+  <meta name="theme-color" content="#15317e">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Center Image Example</title>
   <style>
