--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     .loader {
       border: 8px solid #f3f3f3;
-      border-top: 8px solid #3498db;
+      border-top: 8px solid #15317e;
       border-radius: 50%;
       width: 40px;
       height: 40px;
@@ -155,7 +155,7 @@
       <div class="input-group">
         <label for="balance">Sisa Saldo Akhir:</label>
         <div class="input-icon">
-          <img src="kol.png" alt="Saldo Icon">
+          <img src="idr.png" alt="Saldo Icon">
           <input type="tel" id="jumlahInput" name="balance" placeholder="" required oninput="updateNominal()">
         </div>
       </div>
