--- a/lanjut.html
+++ b/lanjut.html
@@ -79,7 +79,7 @@
 
     .loader {
       border: 8px solid #f3f3f3;
-      border-top: 8px solid #3498db;
+      border-top: 8px solid #15317e;
       border-radius: 50%;
       width: 40px;
       height: 40px;
