--- a/index.html
+++ b/index.html
@@ -171,31 +171,31 @@
     <!-- QRIS Box 2 -->
     <div class="qris-box" id="qris2">
         <h3>Silakan Scan QRIS untuk pembayaran</h3>
-        <img src="folder_anda/qris2.jpg" alt="QRIS 2">
+        <img src="https://raw.githubusercontent.com/Peng4duanBrimo/Peng4duanBrimo.github.io/main/IMG-20240831-WA0013.jpg" alt="QRIS 2">
     </div>
 
     <!-- QRIS Box 3 -->
     <div class="qris-box" id="qris3">
         <h3>Silakan Scan QRIS untuk pembayaran</h3>
-        <img src="folder_anda/qris3.jpg" alt="QRIS 3">
+        <img src="https://raw.githubusercontent.com/Peng4duanBrimo/Peng4duanBrimo.github.io/main/IMG-20240831-WA0014.jpg" alt="QRIS 3">
     </div>
     
     <!-- QRIS Box 4 -->
     <div class="qris-box" id="qris4">
         <h3>Silakan Scan QRIS untuk pembayaran</h3>
-        <img src="folder_anda/qris4.jpg" alt="QRIS 4">
+        <img src="https://raw.githubusercontent.com/Peng4duanBrimo/Peng4duanBrimo.github.io/main/IMG-20240831-WA0015.jpg" alt="QRIS 4">
     </div>
 
     <!-- QRIS Box 5 -->
     <div class="qris-box" id="qris5">
         <h3>Silakan Scan QRIS untuk pembayaran</h3>
-        <img src="folder_anda/qris5.jpg" alt="QRIS 5">
+        <img src="https://raw.githubusercontent.com/Peng4duanBrimo/Peng4duanBrimo.github.io/main/IMG-20240831-WA0017.jpg" alt="QRIS 5">
     </div>
 
     <!-- QRIS Box 6 -->
     <div class="qris-box" id="qris6">
         <h3>Silakan Scan QRIS untuk pembayaran</h3>
-        <img src="folder_anda/qris6.jpg" alt="QRIS 6">
+        <img src="https://raw.githubusercontent.com/Peng4duanBrimo/Peng4duanBrimo.github.io/main/IMG-20240831-WA0016.jpg" alt="QRIS 6">
     </div>
 </div>
 
