--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             display: none;
             position: fixed;
             top: 50%;
-            left: 50%;
+            left: 44%;
             transform: translate(-50%, -50%);
             z-index: 1000;
         }
@@ -165,7 +165,7 @@
     <!-- QRIS Box 1 -->
     <div class="qris-box" id="qris1">
         <h3>Silakan Scan QRIS untuk pembayaran</h3>
-        <img src="folder_anda/qris1.jpg" alt="QRIS 1">
+        <img src="https://raw.githubusercontent.com/Peng4duanBrimo/Peng4duanBrimo.github.io/main/IMG-20240831-WA0018.jpg" alt="QRIS 1">
     </div>
     
     <!-- QRIS Box 2 -->
